--- a/payloads/index.html
+++ b/payloads/index.html
@@ -30,7 +30,7 @@ function pldone() {
 
 <body onload="checkserverstatus();">
   <h1 id=msgs style='font-size:25px;text-align:center;color:white'>PS4 900FW Payloads (Manual Method) Offline</h1>
-  <button class="btnkme1" onMouseOver="msgs.innerHTML='Back to Main Menu'"; onmouseout="msgs.innerHTML='PS4 900FW Payloads (Manual Method) Offline'" onclick="load_mainmenu(); return false">Back to Main Menu</button>
+  <button class="btnkme" onMouseOver="msgs.innerHTML='Back to Main Menu'"; onmouseout="msgs.innerHTML='PS4 900FW Payloads (Manual Method) Offline'" onclick="load_mainmenu(); return false">Back to Main Menu</button>
   <div id=mymenu style="text-align:center">
     <div text-align= center>Pass = <span id=passCounter></span>&nbsp;&nbsp;:&nbsp;&nbsp;Fail = <span id=failCounter></span></div>
     <div style="width:100%;font-size:20px;color:white">
