--- a/payloads/index.html
+++ b/payloads/index.html
@@ -60,8 +60,8 @@ function loadPayloadData() // preload payload data
   <h1 id=msgs style="font-size:25px;color:white;text-shadow: 2px 1px 3px #FF00FF">Kameleon PS4 900FW Jailbreak V4.6</h1>
   <button class="btnkme1" onMouseOver="msgs.innerHTML='Back to Main Menu'"; onmouseout="msgs.innerHTML='Kameleon PS4 900FW Jailbreak V4.6'" onclick="load_mainmenu(); return false">Back to Main Menu</button>
   <div id=mymenu style="text-align:center">
-    <div text-align= center>Pass = <span id=passCounter></span>&nbsp;&nbsp;:&nbsp;&nbsp;Fail = <span id=failCounter></span></div>
-    <div style="width:100%;font-size:22px;color:#9D00FF">
+    <div style="font-size:20px;color:white;text-shadow: 2px 1px 3px #FF00FF" text-align= center>Pass = <span id=passCounter></span>&nbsp;&nbsp;:&nbsp;&nbsp;Fail = <span id=failCounter></span></div>
+    <div style="font-size:20px;color:white;text-shadow: 2px 1px 3px #FF00FF">
     PS4 Firmware <span id="PS4fw"></span></div>
     <br>
     <div style="font-size:20px;color:white;text-shadow: 2px 1px 3px #FF00FF">PAYLOADS</div>
